welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:8: error: Missing closing brace `}' assumed here
}
^ZigZag:14: error: expected start of definition
override def run() {
         ^